hphp/hack/test/typecheck/final_property.php.exp
File "final_property.php", line 4, characters 11-15:
Properties cannot be declared `final` (Parsing[1002])
File "final_property.php", line 5, characters 10-14:
Properties cannot be declared `final` (Parsing[1002])
File "final_property.php", line 3, characters 7-7:
Class `A` has properties that cannot be null and aren't always set in `__construct`. (NastCheck[3015])
File "final_property.php", line 4, characters 21-27:
`$this->value1` is not initialized.
File "final_property.php", line 4, characters 30-36:
`$this->value2` is not initialized.
File "final_property.php", line 5, characters 20-26:
`$this->value3` is not initialized.
File "final_property.php", line 6, characters 15-21:
`$this->value4` is not initialized.
